--- a/style.css
+++ b/style.css
@@ -1,38 +1,70 @@
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
+
 header,
 footer {
   background-color: #00aae4;
   color: white;
 }
-.button-box {
-  background-color: #00aae4;
-  color: white;
-  padding: 20px;
-  margin-bottom: 20px;
-  border: none;
-  display: block;
-  width: 100%;
-  text-align: center;
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
+
 .container {
-  background-color: white;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+
 .search-bar {
   margin: 20px 0;
 }
+
+.row {
+  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: space-around;
+}
+
+.button-box {
+  background-color: #00aae4;
+  color: white;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+.standard-button {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .button-img {
-  height: 48px;
-  width: 48px;
+  height: 50px;
+  width: 50px;
   margin-bottom: 10px;
 }
-.standard-button {
-  width: 200px;
-  height: 200px;
-}
-.btn btn-primary button {
+
+.btn-primary {
   background-color: #2c3e50;
 }
