--- a/style2.css
+++ b/style2.css
@@ -9,7 +9,7 @@ body {
   
   header,
   footer {
-    background-color: #00aae4;
+    background-color: #3b5998;
     color: white;
   }
   
@@ -18,7 +18,7 @@ body {
   }
   
   .button-box {
-    background-color: #00aae4;
+    background-color: #3b5998;
     color: white;
     padding: 10px;
     margin-bottom: 10px;
