--- a/style2.css
+++ b/style2.css
@@ -45,4 +45,12 @@ body {
     background-color: #2c3e50;
   }
 
+  .btn-lg {
+    font-size: 16px;
+    padding: 8px 16px;
+    margin: 5px 0;
+    background-color: #3b5998;
+    border-color: #3b5998;
+}
+
   
